--- a/LeaveManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LeaveManagement.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -31,7 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">My Leaves</a>
                         </li>
-                        <li class="nav-item dropdown text-light">
+                        @if (User.IsInRole(Roles.Administrator))
+                        {
+                         <li class="nav-item dropdown text-light">
                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Leave Management
                           </a>
@@ -41,7 +44,8 @@
                             <li><a class="dropdown-item" href="#">Leave Requests</a></li>
                             <li><a class="dropdown-item" href="#">Employee Management</a></li>
                           </ul>
-                        </li>
+                        </li>   
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
