--- a/LeaveManagement.Web/Views/Employees/viewAllocations.cshtml
+++ b/LeaveManagement.Web/Views/Employees/viewAllocations.cshtml
@@ -28,10 +28,10 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataJoined)
+            @Html.DisplayNameFor(model => model.DateJoined)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataJoined)
+            @Html.DisplayFor(model => model.DateJoined)
         </dd>
     </dl>
     <hr />
