--- a/LeaveManagement.Web/Views/Employees/Index.cshtml
+++ b/LeaveManagement.Web/Views/Employees/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DataJoined)
+                @Html.DisplayNameFor(model => model.DateJoined)
             </th>
             <th></th>
         </tr>
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DataJoined)
+                @Html.DisplayFor(modelItem => item.DateJoined)
             </td>
             <td>
                 <a asp-action="viewAllocations" asp-route-id="@item.Id" class = "btn btn-primary btn-info">View Allocations</a>
