--- a/LeaveManagement.Web/Views/Home/Index.cshtml
+++ b/LeaveManagement.Web/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Welcome to <strong>Odinaka's</strong> Leave Management application, If You want your own application, click the link below <br />' <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
